out/production/FirstHomework/FirstHomework.g4
grammar FirstHomework;
progr       : series;
series      : stmt (';' stmt)*;
stmt        : input_stmt | output_stmt | assign_stmt | cond_stmt | loop;
input_stmt  : 'read' varlist;
output_stmt : 'write' varlist;
assign_stmt : VARNAME ':=' expr;
cond_stmt   : 'if' compar 'then' series ('else' series)? 'fi';
loop        : 'while' compar 'do' series 'end';
compar      : compareor ('or' compareor)* ;
compareor   : compareand ('and' compareand)*;
compareand  : expr RELATION expr | '('compar')' | NOT '(' compar ')' ;
varlist     : VARNAME (',' VARNAME)*;
expr        : term (WEAKOP term)*;
term        : elem (STRONGOP elem)*;
elem        : 'false' | 'true' | NUMBER | VARNAME | '('expr')';
NOT         : '!';
WEAKOP      : '+' | '-';
STRONGOP    : '*' | '/';
RELATION    : '<>' | '=<' | '>=' | '=' | '<' | '>';
NUMBER      : [1-9] [0-9]*;
VARNAME     : ([a-z] | [A-Z] | '_') ([a-z] | [A-Z] | [0-9] | '_')*;
WS          : [ \t\r\n]+ -> skip;
